--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.7",
     "@openzeppelin/contracts": "^4.9.2",
+    "@pinata/sdk": "^2.1.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.3.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
